--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 	"devDependencies": {
 		"typescript": "^5.3.3",
 		"vite": "^5.0.12",
-		"vite-plugin-solid": "^2.9.1",
-		"vite-plugin-solid-svg": "^0.8.0"
+		"vite-plugin-solid": "^2.9.1"
 	},
 	"dependencies": {
 		"@solidjs/router": "^0.10.10",
+		"solid-icons": "^1.1.0",
 		"solid-js": "^1.8.12",
 		"tonal": "^5.1.2"
 	}
